# MobileNetV3_CBAM

./: .gitattributes  .gitignore  DraftTesis_v0.docx  GEMINI.md  README.md  complexity_measurement.py  convert.py  data_setup.py  earlystopping.py  engine.py  eval.py  evaluation_demo.py  evaluations.py  extract_plantdoc.py  image_size_experiment.ipynb  mac.py  merge_plantdoc.py  pyproject.toml  requirements.txt  tesis.ipynb  train.py  training_example.py  utils.py
checkpoints/: mobilenetv3.pth  mobilenetv3_large.pth  mobilenetv3_large_imagenetv1.pth  mobilenetv3_large_imagenetv2.pth  mobilenetv3_large_pretrained.pth  mobilenetv3_small.pth  mobilenetv3_small_pretrained.pth  proposed_model_large.pth  squeezenet.pth
checkpoints/224x224/: squeezenet.pth
converted_models/: mobilenet_v3_small.onnx
csv/confusion_matrices_mobilenetv3_large_cbam_32/: mobilenetv3_large_cbam_32_cm.csv
models/: mobile_shuffle.py  mobilenetv1.py  mobilenetv2.py  mobilenetv3.py  mobilenetv3_cbam.py  model.py  proposed_model.py  squeezenet.py
my_models/: cbam.py  channel_shuffle.py  mobilenetv3.py  proposedmodel.py
notebooks/: image_size_experiment.ipynb  tesis.ipynb  visualization.ipynb
paper/: main.tex  references.bib
penulisan/: DraftTesis_v0.docx
results/checkpoints/: MobileNetV3_Large_CBAM_16_epoch_6.pth  (+6 more)
scripts/: debug_plantdoc.py  eval.py  measure_complexity.py  test_module.py  train.py  train_domain_adapt.py  validate_plantdoc.py
src/: __init__.py  config.py  data_setup.py  domain_adaptation.py  engine.py  statistical_tests.py  utils.py
tests/: test_model.py
(+18 files in other folders)
