[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.1.0"
description = "MobileNetV3 with CBAM for thesis"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["machine learning", "computer vision", "mobilenet", "cbam"]
authors = [
    { name = "Firmansyah Sundana", email = "firmansyahsundana@protonmail.ch" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.9.0",
    "torchvision",
    "numpy",
    "pandas",
    "matplotlib",
    "tensorboard",
    "jupyter",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
notebook = ["jupyter", "ipykernel", "matplotlib", "seaborn"]

[project.urls]
Homepage = "https://github.com/sundana/MobileNetV3_CBAM"
Issues = "https://github.com/sundana/MobileNetV3_CBAM/issues"
